--- a/class-03/demo/css-demo/index.html
+++ b/class-03/demo/css-demo/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +9,32 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <h1>CSS</h1>
   <section>
     <h2>Box Model:</h2>
     <img class="picture" src="img/box-model-strawberries.jpeg" alt="A drawing of strawberries that have been picked and are placed on leaves." >
   </section>
-  <!-- <section>
+  <section id="blockAndInline">
     <h2>Block vs Inline:</h2>
-    <div>Div One</div>
-    <div>Div Two</div>
-    <div>Div Three</div>
-  
-    <span>Span One</span>
-    <span>Span Two</span>
-    <span>Span Three</span>
-  </section> -->
+    <div class="parent">
+      <div>Div One</div>
+      <div>Div Two</div>
+      <div>Div Three</div>
+    </div>
+
+    <aside>Aside</aside>
+
+    <p>Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.Toto, I don't think we're in <span>Kansas</span>
+      anymore.Toto, I don't think we're in <span>Kansas</span> anymore.</p>
+  </section>
 </body>
+
 </html>
