Added class 5 demos.

--- a/class-05/demo/css-demo/index.html
+++ b/class-05/demo/css-demo/index.html
@@ -14,6 +14,18 @@
       <div class="car">div.car</div>
       <section class="car">section.car</section>
     </section>
+    <div> div
+      <section> Section1
+        <span>Span1</span>
+      </section>
+      <span>Span2</span>
+      <span>Span3</span>
+    </div>
+    <ul>
+      <li>li 1</li>
+      <li>li 2</li>
+      <li>li 3</li>
+    </ul>
   </main>
 </body>
 </html>
