--- a/class-05/demo/css-demo/positioning.html
+++ b/class-05/demo/css-demo/positioning.html
@@ -15,26 +15,26 @@
 
     <article id="one">
       One
-      <!-- <h2>Position: relative</h2>
+      <h2>Position: relative</h2>
       <p>
         It will display exactly the same as before until you also assign its position using: left, right, top or bottom. This will position it that distance relative to its original position.
-      </p> -->
+      </p>
     </article>
     <article id="two">
       Two
-      <!-- <h2>Position: absolute</h2>
+      <h2>Position: absolute</h2>
       <p>
         This element displays relative to its most recent parent element with positioning set. If it has no positioned parent, it will display relative to the page window.
-      </p> -->
+      </p>
     </article>
     <article id="three">
       Three
-      <!-- <h2>Position: Fixed</h2>
+      <h2>Position: Fixed</h2>
       <p>
         This will position the element relative to the viewport. It will stay in the same place even if the page scrolls, be careful!
         It can block content on your page unless you account for it by adding padding or margin to other
         elements. See the div asking for help? Adjust the size of the browser and you will see some cases where that div is completely hidden by this fixed element.
-      </p> -->
+      </p>
     </article>
 
   </section>
