--- a/class-05/demo/css-demo/layout.html
+++ b/class-05/demo/css-demo/layout.html
@@ -10,8 +10,8 @@
   <h1>More CSS Layout</h1>
 
   <section>
-  		<div id="one">Box 1</div>
-  		<div id="two">Box 2</div>
+  		<div id="one">Box 1 djklajklg fda</div>
+  		<div id="two">Box 2 djajkl dhjlj</div>
   		<div id="three">Box 3</div>
 	</section>
 
