Added demo code from class 6.

--- a/class-06/demo/dom-manipulation-kitten/index.html
+++ b/class-06/demo/dom-manipulation-kitten/index.html
@@ -14,17 +14,18 @@
       <h2>Kittens Available for Adoption:</h2>
       <div id="kittenProfiles">
         <article>
-          <h3></h3>
-          <p></p>
+          <h3>Frankie</h3>
+          <p>Frankie is adorable and is 3 months old.</p>
           <ul>
-            <li></li>
+            <li>Lazer pointer</li>
           </ul>
-          <img>
+          <img src="images/frankie.jpeg" alt="Frankie is very cute" width="275" height="184">
         </article>
       </div>
     </main>
     <footer>
     </footer>
 
+    <script src="js/app.js"></script>
   </body>
 </html>
