added wireframe demo code.

--- a/class-08/demo/wireframe/index.html
+++ b/class-08/demo/wireframe/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
+<body>
+  <header>
+    <nav>
+      <img src="http://place-hold.it/200x70/ddd" />
+      <ul>
+        <li><a href="#">Nav Item 1</a></li>
+        <li><a href="#">Nav Item 2</a></li>
+        <li><a href="#">Nav Item 3</a></li>
+        <li><a href="#">Nav Item 4</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="http://place-hold.it/960x450/ddd" />
+    <img src="http://place-hold.it/300x375/ddd" />
+    <img src="http://place-hold.it/300x375/ddd" />
+    <img src="http://place-hold.it/300x375/ddd" />
+    <img src="http://place-hold.it/480x400/ddd" />
+    <article>
+      <h3>Header</h3>
+      <section>
+        <p>Paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Suscipit facilis necessitatibus deleniti eveniet vero sed corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos!</p>
+        <p>Paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Suscipit facilis necessitatibus deleniti eveniet vero sed corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos!</p>
+        <p>Paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Suscipit facilis necessitatibus deleniti eveniet vero sed corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere blanditiis incidunt rerum ullam! Sapiente sint rem consequatur a nostrum, qui dignissimos!</p>
+      </section>
+      <a href="#">Call to Action</a>
+    </article>
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
