Forms and events after lecture

--- a/class-09/demo/constructors-tables/index.html
+++ b/class-09/demo/constructors-tables/index.html
@@ -20,6 +20,44 @@
       </thead>
       <tbody></tbody>
     </table>
+
+    <form id="musician_form">
+      <fieldset >
+        <legend>Name</legend>
+        <label>
+          First
+          <input name="first"
+            required
+            placeholder="First Name" />
+        </label>
+
+        <label for="last">
+          Last
+          <input name="last" />
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>About</legend>
+        <label>
+          Nationality
+          <!-- <input name="nationality" required /> -->
+         <select name="nationality">
+           <optgroup label="North America">
+            <option value="amer">American</option>
+            <option value="can">Canadian</option>
+           </optgroup>
+           <optgroup label="Central and South America">
+            <option>Mexican</option>
+            <option>Venzualan</option>
+           </optgroup>
+         </select>
+        </label>
+      </fieldset>
+
+      <button id="add_button">Add Musician</button>
+    </form>
+
     </main>
 
     <script type="text/javascript" src="js/app.js"></script>
