--- a/class-09/demo/multiplication/index.html
+++ b/class-09/demo/multiplication/index.html
@@ -7,8 +7,21 @@
   </head>
   <body>
     <main>
-      <h1>Multiplication</h1>
+      <h1>About Me</h1>
 
+      <label>
+        Name
+        <input id="name" />
+      </label>
+
+      <label>
+        Favorite Number
+        <input id="favNum" type="number" />
+      </label>
+
+      <button id="greet">Greet</button>
+
+      <p id="greeting"></p>
 
     </main>
 
